--- a/newPage/BlancePage.html
+++ b/newPage/BlancePage.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your-Blance-Here</title>
     <link rel="stylesheet" href="BlancePages.css">
+    <!-- responsive css -->
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
